--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,8 @@
                 <ul class="footer-menu-ul">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="about.html">Sobre Nosotros</a></li>
-                    <li><a href="#">Como Ayudar</a></li>
-                    <li><a href="contact.html">Contacto</a></li>
+                    <li><a href="help.html">Como Ayudar</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
             </div>
             <div class="redes-sociales">
