--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="encabezado">
         <div class="titulo">
             <a href="#"><img class="logo" src="img/icono.png" alt="Logo"></a>
-            <h1>Salva al Planeta</h1>
+            <a id="main-title" href="index.html">Salva al Planeta</a>
         </div>
         <div class="Inicio">
             <nav class="navP">
